# Hakurei_Backend

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/: 20240206143054_customers.sql
src/: auth.rs  main.rs  module.rs  router.rs
src/auth/: auth.rs
src/core/: mod.rs
src/core/common/: constants.rs
src/core/config/: cors.rs  mod.rs
src/core/db_manager/: mod.rs  mysql_conn.rs  mysql_manager.rs  redis_manager.rs
src/core/response/: custom_response.rs  mod.rs
src/handlers/: api_response.rs
src/models/: blog.rs  mod.rs  mysql_conn.rs  user.rs
src/response/: api_response.rs  mod.rs  response_obj.rs
src/routes/: blog_routes.rs  error_routes.rs  mod.rs  user_routes.rs
src/services/: blog_services.rs  mod.rs  user_services.rs
src/utils/: auth.rs  mod.rs  uuid.rs
