[package]
name = "hakurei_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "*", default-features = false, features = ["mysql", "macros","runtime-tokio", "chrono"]}
serde = { version = "*", features = ["derive"]}
chrono = { version = "*", features = ["serde"]}
mysql = "*"
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
