[package]
name = "hakurei_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
mysql = "*"
redis = { version = "*", features = ["r2d2"] }
r2d2 = { version="*" }
sqlx = { version = "*", default-features = false, features = ["mysql", "macros","runtime-tokio", "chrono"]}
uuid = { version = "1.7.0", features = ["v4", "fast-rng","macro-diagnostics"]}
serde = { version = "*", features = ["derive"]}
chrono = { version = "*", features = ["serde"]}
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
